--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div class="text-center text-danger fs-2 m-2"><b>OUR FACILITIES</b></div>
       <div class="row text-center">
           <div class="col border">
-            <a href="#gym"><img src="Gym.png" width="200px"height="200px" alt=""></a>GYM
+            <a href="#gym"><img src="GYM.png" width="200px"height="200px" alt=""></a>GYM
           </div>
 
           <div class="col border"> 
